--- a/diapos/RadiacionSolar.tex
+++ b/diapos/RadiacionSolar.tex
@@ -1,4 +1,4 @@
-% Created 2020-01-24 vie 09:49
+% Created 2020-02-05 mié 08:40
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -39,7 +39,6 @@
 \usepackage{gensymb}
 \usepackage{amsmath}
 \usepackage{chemarr}%flechas para reacciones químicas (SFER.tex)
-\hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 \beamertemplatenavigationsymbolsempty
 \setbeamertemplate{footline}[frame number]
@@ -64,9 +63,9 @@
 \maketitle
 
 \section{Introducción}
-\label{sec:org0bf106a}
+\label{sec:org5b9a6fd}
 
-\begin{frame}[label={sec:orgf44c87c}]{Radiación Solar y Sistemas Fotovoltaicos}
+\begin{frame}[label={sec:orge41fe27}]{Radiación Solar y Sistemas Fotovoltaicos}
 \begin{itemize}
 \item La \alert{energía producida} por un sistema fotovoltaico depende principalmente de la \alert{radiación incidente} en el generador.
 
@@ -78,7 +77,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org800c711}]{La radiación solar no se puede calcular analíticamente}
+\begin{frame}[label={sec:orgfd868db}]{La radiación solar no se puede calcular analíticamente}
 \begin{itemize}
 \item La radiación solar que alcanza la superficie terrestre es el resultado de complejas interacciones en la atmósfera.
 \item Para estimar la radiación se requiere medidas terrestres o imágenes de satélite.
@@ -88,7 +87,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6f60def}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org4153327}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un \alert{ángulo de inclinación positivo} para maximizar el rendimiento.
 \item Este ángulo depende de la \alert{latitud} del lugar y de la \alert{aplicación del sistema}.
@@ -99,7 +98,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0cb0612}]{Bases de Datos de Radiación Solar}
+\begin{frame}[label={sec:org65cb9db}]{Bases de Datos de Radiación Solar}
 \begin{itemize}
 \item Por tanto, es inviable mantener una base de datos de radiación solar \alert{incidente}.
 \item Las \alert{bases de datos} registran radiación en el \alert{plano horizontal}.
@@ -108,18 +107,18 @@
 \end{frame}
 
 
-\begin{frame}[label={sec:org0779ab9}]{Del plano horizontal al plano inclinado}
+\begin{frame}[label={sec:orgd359e8d}]{Del plano horizontal al plano inclinado}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada.pdf}
 \end{center}
 \end{frame}
 
 \section{Geometría Sol y Tierra}
-\label{sec:org1ad3d50}
+\label{sec:orgbe13a5a}
 \subsection{Movimiento Sol-Tierra}
-\label{sec:org3202fb4}
+\label{sec:org4ce69c8}
 
-\begin{frame}[label={sec:org5f7a86d}]{Movimiento terrestre}
+\begin{frame}[label={sec:org3d1acd4}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -141,7 +140,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1288bd4}]{Movimiento terrestre}
+\begin{frame}[label={sec:orgf39cf2b}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -156,9 +155,9 @@ eclíptica}
 
 
 \subsection{Ángulos Solares}
-\label{sec:org7fdfefc}
+\label{sec:orgf6c6ade}
 
-\begin{frame}[label={sec:org42d7ea5},plain]{Ejes terrestres}
+\begin{frame}[label={sec:org5a40464},plain]{Ejes terrestres}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -179,7 +178,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga5a6b29}]{Declinación}
+\begin{frame}[label={sec:orgd9516b5}]{Declinación}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/Declinacion.pdf}
 \end{center}
@@ -190,7 +189,7 @@ eclíptica}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc2f91e6}]{Estaciones}
+\begin{frame}[label={sec:orgbb1702f}]{Estaciones}
 \begin{itemize}[<+->]
 \item \alert{Solsticio de junio} 
 \begin{itemize}[<.->]
@@ -231,7 +230,7 @@ hemisferio Norte.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf0d3d52}]{Hora Solar}
+\begin{frame}[label={sec:org7be5d69}]{Hora Solar}
 \begin{itemize}
 \item \(w\), diferencia entre instante en curso y el mediodía solar (\(w = 0\), \(\psi_s = 0\)).
 \item Criterio de signos: \(w < 0\) antes del mediodía.
@@ -248,13 +247,13 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org7fa6736}]{Duración del día}
+\begin{frame}[label={sec:org74565d6}]{Duración del día}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DuracionDia.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orged8a26b},plain]{Ejes locales}
+\begin{frame}[label={sec:orgef41338},plain]{Ejes locales}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -277,7 +276,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc018858}]{Relación entre sistemas de coordenadas}
+\begin{frame}[label={sec:orge84ecea}]{Relación entre sistemas de coordenadas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RelacionSistemasCoordenadas.pdf}
 \end{center}
@@ -287,7 +286,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2da1f3d},plain]{Cenit Solar}
+\begin{frame}[label={sec:org84a9351},plain]{Cenit Solar}
 \[
 \cos(\theta_{zs}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
 \]
@@ -308,7 +307,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgbd1d05e},plain]{Azimut solar}
+\begin{frame}[label={sec:org407cbfb},plain]{Azimut solar}
 \[
   \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
 \]
@@ -329,14 +328,14 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgad07e47}]{Trayectoria Solar (\(60\degree N\))}
+\begin{frame}[label={sec:org7263993}]{Trayectoria Solar (\(60\degree N\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar60N.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb625775}]{Trayectoria Solar (\(40\degree S\))}
+\begin{frame}[label={sec:org07755b8}]{Trayectoria Solar (\(40\degree S\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar40S.pdf}
 \end{center}
@@ -344,8 +343,8 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 
 
 \subsection{Hora solar y oficial}
-\label{sec:org9e538d7}
-\begin{frame}[label={sec:orgdc1844a}]{Hora solar}
+\label{sec:org20315df}
+\begin{frame}[label={sec:org79aef1a}]{Hora solar}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}
@@ -357,7 +356,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org98eb71a}]{Hora oficial}
+\begin{frame}[label={sec:org6c45813}]{Hora oficial}
 \begin{itemize}
 \item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
 que sirve de referencia para una zona determinada.
@@ -374,7 +373,7 @@ horario. \emph{\(\Delta\lambda\) es positiva cuando la localidad está situada a
 \end{frame}
 
 
-\begin{frame}[label={sec:org9e5d0b7}]{Tiempo solar medio}
+\begin{frame}[label={sec:orgb5a174b}]{Tiempo solar medio}
 \begin{itemize}
 \item \alert{La duración del día solar real}, definido como el tiempo que
 transcurre entre dos pasos consecutivos del Sol por el meridiano
@@ -386,7 +385,7 @@ duración del día solar real.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org753ecd8}]{Ecuación del Tiempo}
+\begin{frame}[label={sec:orgd9107e4}]{Ecuación del Tiempo}
 \[
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
       M+3.5884\right)\right)
@@ -400,7 +399,7 @@ M=\frac{2\pi}{365.24}\cdot d_{n}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7d1bc59}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orgc5ec6e5}]{Ejemplo de cálculo}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{block}{}
@@ -412,7 +411,7 @@ Calcule la hora solar real correspondiente al día 23 de Abril de 2010
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgb6c55fc}]{Solución}
+\begin{frame}[label={sec:org7c1a587}]{Solución}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}[<+->]
@@ -431,7 +430,7 @@ oficial.
 \end{frame}
 
 
-\begin{frame}[label={sec:org246a858}]{}
+\begin{frame}[label={sec:org32a2513}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -440,12 +439,12 @@ oficial.
 \end{frame}
 
 \section{Radiación Solar en la Superficie Terrestre}
-\label{sec:org9e4080d}
+\label{sec:orgf08f682}
 
 \subsection{Radiación Extra-atmosférica}
-\label{sec:org3ea6dcf}
+\label{sec:org3fbd0d8}
 
-\begin{frame}[label={sec:org4655b5b}]{Irradiancia e Irradiación}
+\begin{frame}[label={sec:orgd54c79f}]{Irradiancia e Irradiación}
 \begin{description}
 \item[{Irradiancia}] es la densidad de \emph{potencia} de radiacion solar incidente en una superficie.
 \begin{itemize}
@@ -458,14 +457,14 @@ oficial.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org07e06c9}]{Definición}
+\begin{frame}[label={sec:orgda6d345}]{Definición}
 \begin{itemize}
 \item \alert{Radiación extra-atmosférica}: radiación directa del Sol que alcanza la superficie de la atmósfera.
 
 \item \alert{Constante solar} \(B_{0}=\SI{1367}{\watt\per\meter\squared}\) (irradiancia solar sobre la superficie normal al vector solar en el límite superior de la atmósfera terrestre)
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org2f83c70}]{Ecuaciones}
+\begin{frame}[label={sec:orgee0b85f}]{Ecuaciones}
 \begin{itemize}
 \item \alert{Irradiancia extra-atmosférica} (\(\si{\watt\per\meter\squared}\))
 
@@ -483,7 +482,7 @@ oficial.
 \end{frame}
 
 
-\begin{frame}[label={sec:org8c328cf}]{Días promedio}
+\begin{frame}[label={sec:org1d4d555}]{Días promedio}
 \begin{itemize}
 \item Es posible demostrar que el \alert{promedio mensual} de esta irradiación
 diaria \alert{coincide numericamente} con el valor de irradiación diaria
@@ -513,14 +512,14 @@ Mes & Jul & Ago & Sep & Oct & Nov & Dic\\
 \end{frame}
 
 \subsection{Radiación solar en la superficie terrestre}
-\label{sec:orga350797}
-\begin{frame}[label={sec:org1d5d9e0}]{}
+\label{sec:org39b71c4}
+\begin{frame}[label={sec:orge685ff5}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_G0.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgae0bf0f}]{Interacción de la radiación con la atmósfera}
+\begin{frame}[label={sec:org4d3d2ba}]{Interacción de la radiación con la atmósfera}
 \begin{itemize}
 \item \alert{Disminución} de la radiación incidente en la superficie terrestre
 (reflexión en nubes)
@@ -537,7 +536,7 @@ partículas)
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgde91773}]{Componentes de la radiación solar}
+\begin{frame}[label={sec:org8f101f9}]{Componentes de la radiación solar}
 \begin{itemize}
 \item \alert{Radiación Directa}. (B)
 
@@ -565,7 +564,7 @@ partículas)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbd526a2}]{Cómo se escribe}
+\begin{frame}[label={sec:orge65f294}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \begin{description}
 \item[{Forma+Tiempo+Lugar:}] Irradiancia directa (forma) horaria (tiempo)
@@ -585,7 +584,7 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org81d9e8c}]{Cómo se escribe}
+\begin{frame}[label={sec:org41a7a38}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \[Forma_{tiempo,promedio}(lugar)\]
 
@@ -599,15 +598,15 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 \section{Cálculo de componentes de radiación solar}
-\label{sec:org54e8360}
+\label{sec:org60afc61}
 
-\begin{frame}[label={sec:org9be2d72}]{}
+\begin{frame}[label={sec:orgf4a8644}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_componentes.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org39fe1ac}]{Caracterización de la atmósfera}
+\begin{frame}[label={sec:org399b7bd}]{Caracterización de la atmósfera}
 \begin{itemize}
 \item \alert{Masa de aire}:
 
@@ -636,7 +635,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2c3fefb}]{Índice de claridad}
+\begin{frame}[label={sec:orge318971}]{Índice de claridad}
 \begin{description}
 \item[{\(K_{T}\):}] índice de claridad instantáneo. \(K_{T}=G/B_{0}\)
 
@@ -648,7 +647,7 @@ movimiento aparente del sol}.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orge91e85e}]{Estimación de Directa y Difusa}
+\begin{frame}[label={sec:orgb088831}]{Estimación de Directa y Difusa}
 \begin{itemize}
 \item Objetivo: Establecer una \alert{relación entre la fracción difusa} de la radiación horizontal (\(F_{D}=\frac{D(0)}{G(0)}\)) y \alert{el índice de claridad}.
 
@@ -658,7 +657,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgac7fe65},plain]{Medias mensuales: Ecuación de Page}
+\begin{frame}[label={sec:org27a358b},plain]{Medias mensuales: Ecuación de Page}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtMensual.pdf}
 \end{center}
@@ -666,7 +665,7 @@ movimiento aparente del sol}.
 \[F_{Dm}=1-1.13\cdot K_{Tm}\]
 \end{frame}
 
-\begin{frame}[label={sec:orgb252460}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
+\begin{frame}[label={sec:org840a972}]{Correlaciones \(F_{D}\) y \(K_{T}\)}
 Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\) en un mes con \(B_{o,dm}(0) = \SI{4320}{\watthour\per\meter\squared}\)  será:
 
 \begin{itemize}
@@ -680,7 +679,7 @@ Ejemplo: en un lugar con \(G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}\)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org38bd592},plain]{Valores Diarios: Collares-Pereira y Rabl}
+\begin{frame}[label={sec:org2fefcd4},plain]{Valores Diarios: Collares-Pereira y Rabl}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtDiario.pdf}
 \end{center}
@@ -694,7 +693,7 @@ F_{Dd} = \begin{cases}
 {\scriptsize \par}
 \end{frame}
 
-\begin{frame}[label={sec:org5cd00c8}]{Ejemplo}
+\begin{frame}[label={sec:org27176b1}]{Ejemplo}
 \begin{description}
 \item[{Calcular}] las componentes directa y difusa de la radiación solar del:
 
@@ -705,10 +704,10 @@ F_{Dd} = \begin{cases}
 \end{description}
 \end{frame}
 \section{Bases de Datos}
-\label{sec:org2beb5bb}
+\label{sec:org7b16fec}
 \subsection{Introducción}
-\label{sec:orgab53f45}
-\begin{frame}[label={sec:org39ef27c}]{Variabilidad Solar}
+\label{sec:org1766fdc}
+\begin{frame}[label={sec:orga60efd9}]{Variabilidad Solar}
 \begin{itemize}
 \item La \alert{radiación extra-atmosférica} se puede expresar de forma \alert{analítica} en función del día, hora y latitud.
 \item La \alert{radiación en la superficie terrestre} es un \alert{proceso estocástico} (aleatorio) debido a la interacción con la atmósfera.
@@ -718,7 +717,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgbb556f0}]{Estimaciones a Largo Plazo}
+\begin{frame}[label={sec:org9572701}]{Estimaciones a Largo Plazo}
 \begin{itemize}
 \item Nos interesan \alert{estimaciones a largo plazo} del funcionamiento de los sistemas FV en una localización concreta.
 \item Las fuentes de datos de radiación solar deben:
@@ -729,7 +728,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8193892}]{Variabilidad Temporal}
+\begin{frame}[label={sec:org31c4b78}]{Variabilidad Temporal}
 \begin{center}
 \includegraphics[height=0.45\textheight]{../figs/VariabilidadRadiacionDiario.pdf}
 \end{center}
@@ -741,7 +740,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5496b38}]{Variabilidad Espacial}
+\begin{frame}[label={sec:orgdf45462}]{Variabilidad Espacial}
 \begin{center}
 \includegraphics[height=0.4\textheight]{../figs/SpatialVariability.jpg}
 \end{center}
@@ -753,7 +752,7 @@ F_{Dd} = \begin{cases}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd4ae36d}]{Resumen}
+\begin{frame}[label={sec:orgf854b45}]{Resumen}
 \begin{block}{Requerimientos}
 Una estimación de la productividad de un SFV confiable y representativa en el largo plazo requiere:
 \begin{itemize}
@@ -764,8 +763,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Fuentes de Datos}
-\label{sec:org19cb55d}
-\begin{frame}[label={sec:org442e667}]{Estaciones Meteorológicas}
+\label{sec:org34b3869}
+\begin{frame}[label={sec:org1cf08d2}]{Estaciones Meteorológicas}
 \begin{itemize}
 \item Series temporales largas
 \item Alta resolución temporal (\(\SI{1}{\min}\))
@@ -783,7 +782,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:org9312bee}]{Imágenes de Satelite}
+\begin{frame}[label={sec:org397cbb1}]{Imágenes de Satelite}
 \begin{itemize}
 \item Baja resolución temporal (\(\SI{1}{hora}\)).
 
@@ -796,7 +795,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:org33c1938}]{Métodos Híbridos}
+\begin{frame}[label={sec:org4c22a86}]{Métodos Híbridos}
 \begin{itemize}
 \item Las medidas terrestres se mezclan con las estimaciones de satélite para mejorar la resolución espacial.
 \item Interpolación Espacial.
@@ -815,7 +814,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org619d869}]{Fuentes de Datos}
+\begin{frame}[label={sec:org1b312f2}]{Fuentes de Datos}
 \url{https://github.com/oscarperpinan/mds/wiki}
 
 \begin{itemize}
@@ -836,8 +835,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Control de Calidad}
-\label{sec:org9b4c310}
-\begin{frame}[label={sec:org5e777ad}]{Introducción}
+\label{sec:org8a148d9}
+\begin{frame}[label={sec:orgdfad96a}]{Introducción}
 \begin{itemize}
 \item Es necesario filtrar y corregir las medidas para eliminar datos erróneos y valores extremos.
 \begin{itemize}
@@ -848,7 +847,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org23860ee}]{Límites Físicos}
+\begin{frame}[label={sec:orgfa7933b}]{Límites Físicos}
 \begin{itemize}
 \item El índice de claridad no puede ser mayor que 1 (la irradiación global diaria no puede superar la extra-atmosférica).
 \end{itemize}
@@ -868,14 +867,14 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgf1706c4}]{Coherencia Espacial}
+\begin{frame}[label={sec:org21d8440}]{Coherencia Espacial}
 \begin{itemize}
 \item Las medidas de una estación se deben comparar con \alert{estaciones cercanas} (por ejemplo, mediante interpolación espacial).
 \item La comparación se debe realizar con \alert{valores agregados} (medias diarias o mensuales).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga85c284}]{Análisis Estadístico de las Desviaciones}
+\begin{frame}[label={sec:orgff8a02b}]{Análisis Estadístico de las Desviaciones}
 \begin{itemize}
 \item Desviaciones, \(\mathbf{D}\), entre observaciones, \(\mathbf{O}\), y un modelo, \(\mathbf{M}\) (u otro conjunto de observaciones):
 \end{itemize}
@@ -893,7 +892,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orge4a0912}]{Exactitud y Precisión}
+\begin{frame}[label={sec:org8a690c4}]{Exactitud y Precisión}
 \begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/bias-variance.png}
 \end{center}
@@ -901,7 +900,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:orga9a8e07}]{Métricas}
+\begin{frame}[label={sec:org9afab34}]{Métricas}
 \begin{itemize}
 \item \alert{Mean Bias Difference (MBD)}, diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -924,7 +923,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|m_i - o_i\right|
 \]
 \end{frame}
-\begin{frame}[label={sec:org556690e}]{}
+\begin{frame}[label={sec:orgfcad505}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -933,12 +932,12 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{frame}
 
 \section{Radiación Solar en Generadores FV}
-\label{sec:org853c617}
+\label{sec:org7e129f1}
 
 \subsection{Introducción}
-\label{sec:org9c25d67}
+\label{sec:orgbf67788}
 
-\begin{frame}[label={sec:org334be2f}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:orgffd5d97}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un ángulo de inclinación positivo para maximizar el rendimiento.
 \item Este ángulo depende de la latitud del lugar y de la aplicación del sistema.
@@ -949,7 +948,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgcc795f5}]{Definiciones}
+\begin{frame}[label={sec:org8a2c1c5}]{Definiciones}
 \begin{itemize}
 \item \(\theta_s\), \alert{ángulo de incidencia (AOI)}, ángulo entre los rayos solares y la perpendicular al plano del generador.
 \item \(\alpha\): \alert{orientación del generador} (0º cuando está orientado al mediodía solar)
@@ -957,14 +956,14 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{frame}
 \subsection{Tipos de Sistemas}
-\label{sec:orgf15218b}
-\begin{frame}[label={sec:orgffd5641}]{Sistema Estático}
+\label{sec:org615657a}
+\begin{frame}[label={sec:org7be77ee}]{Sistema Estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgd3e32f0}]{Sistemas con seguimiento}
+\begin{frame}[label={sec:org1b64837}]{Sistemas con seguimiento}
 \begin{itemize}[<+->]
 \item \alert{Fundamento:}
 \begin{itemize}[<.->]
@@ -983,7 +982,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org0ce334d}]{Algunos tipos de seguimiento solar}
+\begin{frame}[label={sec:org64999d2}]{Algunos tipos de seguimiento solar}
 \begin{itemize}[<+->]
 \item \alert{Doble eje}
 \begin{itemize}[<.->]
@@ -1011,27 +1010,27 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgece95d6}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
+\begin{frame}[label={sec:org1a26782}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org5278c47}]{Sistema de Seguimiento (2x ejes)}
+\begin{frame}[label={sec:org96fa0eb}]{Sistema de Seguimiento (2x ejes)}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/SeguidorReocin.jpg}
 \end{center}
 \end{frame}
 
 \subsection{Irradiancia a partir de irradiación diaria}
-\label{sec:orgdd05e2f}
-\begin{frame}[label={sec:orgb7552da}]{}
+\label{sec:orgfa15dc9}
+\begin{frame}[label={sec:org16fb50a}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_perfil.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org63603dd}]{Planteamiento}
+\begin{frame}[label={sec:org936540b}]{Planteamiento}
 \begin{itemize}
 \item \alert{Objetivo}: construir un perfil diario promedio de valores de \emph{irradiancia} global y difusa, \(G(0), D(0)\), a partir de valores de \emph{irradiación} global y difusa diaria, \(G_d(0), D_d(0)\).
 
@@ -1050,7 +1049,7 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label={sec:org4821afc}]{Perfil}
+\begin{frame}[label={sec:orgb24dfb1}]{Perfil}
 \[D(0) = r_D \cdot D_{d}(0)\]
 
 \[G(0) = r_G \cdot G_{d}(0)\]
@@ -1059,7 +1058,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org51416a5}]{Ecuaciones}
+\begin{frame}[label={sec:org641af82}]{Ecuaciones}
 \[
 r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\cos(\omega_{s})-\sin(\omega_{s})}
 \]
@@ -1073,28 +1072,33 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 
 \subsection{Transformación al plano del generador}
-\label{sec:orga148edb}
+\label{sec:org76ae68f}
 
-\begin{frame}[label={sec:org1be4e68}]{}
+\begin{frame}[label={sec:org4446046}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_inclinada.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3237fa1}]{Planteamiento}
+\begin{frame}[label={sec:org50134cd}]{Planteamiento}
 \begin{itemize}
-\item \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
-\item \alert{Irradiancia Difusa}: modelos del estado de cielo, modelo isotrópico o anisotrópico.
-\item \alert{Irradiancia de Albedo}: modelo isotrópico con coeficiente de reflexión típico.
+\item \alert{Irradiancia Directa} \(B(\beta, \alpha)\): ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
+\item \alert{Irradiancia Difusa}  \(D(\beta, \alpha)\): modelos del estado de cielo, modelo isotrópico o anisotrópico.
+\item \alert{Irradiancia de Albedo} \(R(\beta, \alpha)\): modelo isotrópico con coeficiente de reflexión típico.
 \end{itemize}
+
+\[
+G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
+\]
 \end{frame}
-\begin{frame}[label={sec:org1c67203}]{Irradiancia Directa}
+
+\begin{frame}[label={sec:org59dede6}]{Irradiancia Directa}
 \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 
 \[B(\beta,\alpha)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
 \end{frame}
 
-\begin{frame}[label={sec:org83eb8bd}]{Irradiancia Difusa}
+\begin{frame}[label={sec:org85bf000}]{Irradiancia Difusa}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1102,7 +1106,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 \[D(\beta,\alpha)=\intop_{\Omega}L(\theta_{z},\psi)\cdot\cos(\theta_{z}^{'})d\Omega\]
 \end{frame}
 
-\begin{frame}[label={sec:org6cd7f93}]{Irradiancia Difusa Isotrópica}
+\begin{frame}[label={sec:orgf4c3d6f}]{Irradiancia Difusa Isotrópica}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1112,7 +1116,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 \[D(\beta,\alpha)=D(0)\cdot\frac{1+\cos(\beta)}{2}\]
 \end{frame}
-\begin{frame}[label={sec:orgd7eacfe}]{Irradiancia Difusa Anisotrópica}
+\begin{frame}[label={sec:org57ead58}]{Irradiancia Difusa Anisotrópica}
 \[D(\beta,\alpha) = D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha)\]
 
 \[D^{I}(\beta,\alpha) = D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2}\]
@@ -1122,7 +1126,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 \[k_{1} = \frac{B(0)}{B_{0}(0)}\]
 \end{frame}
 
-\begin{frame}[label={sec:org4ddb466}]{Irradiancia de Albedo}
+\begin{frame}[label={sec:orge21818f}]{Irradiancia de Albedo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1134,8 +1138,8 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 \end{frame}
 
 \subsection{Geometría de los sistemas fotovoltaicos}
-\label{sec:org0f1567e}
-\begin{frame}[label={sec:orge80a3cb},plain]{Ángulo de Incidencia Sistema Estático}
+\label{sec:orgd2fbfbe}
+\begin{frame}[label={sec:org3648761},plain]{Ángulo de Incidencia Sistema Estático}
 \begin{itemize}
 \item Si \(\alpha=0\)
 \end{itemize}
@@ -1152,7 +1156,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6421323}]{Sistema Estático: Ángulo de Incidencia}
+\begin{frame}[label={sec:org3c04fa8}]{Sistema Estático: Ángulo de Incidencia}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1163,7 +1167,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 
 
-\begin{frame}[label={sec:orgfec84b8},plain]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:orgd2822a8},plain]{Ángulo de Incidencia Seguidor 1x NS}
 \[\cos(\theta_{s})=\cos(\delta)\sqrt{\sin^{2}(\omega)+\left(\cos(\omega)\cos(\phi)+\tan(\delta)\sin(\phi)\right)^{2}}\]
 
 \begin{center}
@@ -1171,7 +1175,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org922a471}]{Ángulo de Inclinación Seguidor 1x NS}
+\begin{frame}[label={sec:org8b6e767}]{Ángulo de Inclinación Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1182,7 +1186,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 
 
-\begin{frame}[label={sec:orgedbeeec}]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org91982e7}]{Ángulo de Incidencia Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1194,7 +1198,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 
 
-\begin{frame}[label={sec:org6c10254},plain]{Ángulo de Incidencia Seguidor 2x}
+\begin{frame}[label={sec:org468748a},plain]{Ángulo de Incidencia Seguidor 2x}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
 \end{center}
@@ -1206,7 +1210,7 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
   \cos(\theta_{s}) &= 1
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:orgfb87810}]{Inclinación Seguidor 2x}
+\begin{frame}[label={sec:org4dfe1fb}]{Inclinación Seguidor 2x}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1217,38 +1221,38 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 
 
 \subsection{Pérdidas angulares y por suciedad}
-\label{sec:org1e3e762}
+\label{sec:org554eb58}
 
-\begin{frame}[label={sec:orgf1c2573}]{}
+\begin{frame}[label={sec:org32eb355}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_efectiva.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf8be28f}]{Radiación directa}
+\begin{frame}[label={sec:orge50574d}]{Radiación directa}
 \[B_{ef}(\beta,\alpha)=B(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot (1-FT_{B}(\theta_{s}))\]
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/Suciedad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org158ba44}]{Difusa y Albedo}
+\begin{frame}[label={sec:orgecf1487}]{Difusa y Albedo}
 \begin{align*}
 D_{ef}^{iso}(\beta,\alpha) &= D^{iso}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{D}(\beta))\\
 D_{ef}^{cir}(\beta,\alpha) &= D^{cir}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{B}(\theta_{s}))\\
 R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{R}(\beta))
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:orgd5a1e93}]{Pérdidas anuales}
+\begin{frame}[label={sec:org34367b1}]{Pérdidas anuales}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/GefVSG.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Radiación Efectiva según tipologías}
-\label{sec:org93c5631}
+\label{sec:org909a5b1}
 
-\begin{frame}[label={sec:org0bc77fe}]{Radiación en Sistema estático}
+\begin{frame}[label={sec:orgb1917fe}]{Radiación en Sistema estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FixedKrig.pdf}
 \end{center}
@@ -1256,7 +1260,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org31143f0}]{Radiación en Seguimiento Eje Horizontal}
+\begin{frame}[label={sec:org5e3a651}]{Radiación en Seguimiento Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizKrig.pdf}
 \end{center}
@@ -1264,14 +1268,14 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org6361130}]{Radiación en Seguimiento Doble Eje}
+\begin{frame}[label={sec:orga3086c2}]{Radiación en Seguimiento Doble Eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoKrig.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org98f9a79}]{Comparación Doble Eje-Estática}
+\begin{frame}[label={sec:org3b86fe1}]{Comparación Doble Eje-Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoFixed.pdf}
 \end{center}
@@ -1279,7 +1283,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:orgd232e65}]{Comparación Doble Eje - Horizontal}
+\begin{frame}[label={sec:org93acb3f}]{Comparación Doble Eje - Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoHoriz.pdf}
 \end{center}
@@ -1287,7 +1291,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org8a70988}]{Comparación Eje Horizontal - Estática}
+\begin{frame}[label={sec:org9266d17}]{Comparación Eje Horizontal - Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizFixed.pdf}
 \end{center}
@@ -1295,20 +1299,20 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org46f9583}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org5e9c95a}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystems.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org5e4e06e}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org74fdb07}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystemsG0.png}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org002f12f}]{}
+\begin{frame}[label={sec:orgb7b4756}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
