--- a/diapos/RadiacionSolar_Formulas.tex
+++ b/diapos/RadiacionSolar_Formulas.tex
@@ -1,4 +1,4 @@
-% Created 2020-01-24 vie 10:11
+% Created 2020-02-05 mié 08:35
 % Intended LaTeX compiler: pdflatex
 \documentclass[article, a4paper]{memoir}
 	    \counterwithout{section}{chapter}
@@ -41,15 +41,15 @@
 \maketitle
 
 \section{Geometría Sol y Tierra}
-\label{sec:orge8f4fe4}
+\label{sec:org83bd035}
 \subsection{Declinación}
-\label{sec:orgc4abd36}
+\label{sec:org0c8e529}
 \begin{itemize}
 \item Ecuación de Cooper 
 \[\delta=23,45\degree\cdot\sin\left(\frac{2\pi\cdot\left(d_{n}+284\right)}{365}\right)\]
 \end{itemize}
 \subsection{Hora Solar}
-\label{sec:org44f1a91}
+\label{sec:orgbc995ff}
 \begin{itemize}
 \item Criterio de signos: \(w < 0\) antes del mediodía.
 \item 1h = 15º (\(24\text{h} = 2\pi \text{ radians} = 360\))
@@ -57,37 +57,37 @@
 \end{itemize}
 
 \subsection{Amanecer}
-\label{sec:orge351f87}
+\label{sec:org17c2505}
 \[
 \cos(\omega_{s}) = -\tan(\delta)\tan(\phi)
 \]
 
 \subsection{Longitud del día}
-\label{sec:orgc949015}
+\label{sec:org36ef0bb}
 \[
 |2 \cdot \omega_s  |
 \]
 
 \subsection{Cenit Solar}
-\label{sec:org0c165dd}
+\label{sec:org7985987}
 
 \[
 \cos(\theta_{zs}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
 \]
 
 \subsection{Azimut solar}
-\label{sec:org8c42813}
+\label{sec:org4ec47df}
 
 \[
   \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
 \]
 \subsection{Hora solar y Hora Oficial}
-\label{sec:org58cd1b4}
+\label{sec:orgdd7065a}
 
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \subsection{Ecuación del Tiempo}
-\label{sec:orgae8ce3f}
+\label{sec:org6fd16b9}
 
 \[
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
@@ -100,7 +100,7 @@ M=\frac{2\pi}{365.24}\cdot d_{n}
 
 
 \section{Radiación Extra-atmosférica}
-\label{sec:orgd62f467}
+\label{sec:org70354fa}
 
 \begin{itemize}
 \item Constante solar \(B_{0}=\SI{1367}{\watt\per\meter\squared}\)
@@ -133,9 +133,9 @@ d\textsubscript{n} & 17 & 45 & 74 & 105 & 135 & 161 & 199 & 230 & 261 & 292 & 32
 
 
 \section{Radiación solar en la superficie terrestre}
-\label{sec:org7d1dc90}
+\label{sec:org4700f48}
 \subsection{Caracterización de la atmósfera}
-\label{sec:org374dbbe}
+\label{sec:org455c6c3}
 
 \begin{itemize}
 \item Masa de aire
@@ -160,7 +160,7 @@ K_{Td}=\frac{G_d(0)}{B_{0d}(0)}
 \]
 
 \subsection{Estimación de Directa y Difusa}
-\label{sec:orgaac5bd7}
+\label{sec:org25041bf}
 
 \begin{itemize}
 \item Fracción de difusa
@@ -187,10 +187,10 @@ F_{Dd} = \begin{cases}
 \end{cases}
 \]
 \section{Bases de Datos}
-\label{sec:orgdd642d2}
+\label{sec:org31f64a5}
 
 \subsection{Límites Físicos}
-\label{sec:org50a0e8a}
+\label{sec:orgcf83c54}
 
 \[
   K_{dT} \leq 1
@@ -205,7 +205,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 
 \subsection{Análisis Estadístico de las Desviaciones}
-\label{sec:org61d1419}
+\label{sec:org7fccecb}
 
 \[
 MBD = \frac{1}{n} \sum_{i=1}^n (d_i)
@@ -219,9 +219,9 @@ RMSD = \sqrt{\frac{1}{n} \sum_{i=1}^n d_i^2}
 MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| 
 \]
 \section{Radiación Solar en Generadores FV}
-\label{sec:org94f6b04}
+\label{sec:org6143aed}
 \subsection{Irradiancia a partir de irradiación diaria}
-\label{sec:org5367fd0}
+\label{sec:org4de016a}
 \[D(0) = r_D \cdot D_{d}(0)\]
 
 \[G(0) = r_G \cdot G_{d}(0)\]
@@ -236,7 +236,7 @@ r_D = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\co
 
 \[b=0.6609+0.4767\cdot\sin(\omega_{s}+\frac{\pi}{3})\]
 \subsection{Ángulo de incidencia en sistemas fotovoltaicos}
-\label{sec:orgc201225}
+\label{sec:orgf83da1b}
 \begin{itemize}
 \item Sistema estático (\(\alpha=0\))
 \end{itemize}
@@ -257,27 +257,27 @@ r_D = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\co
 \]
 
 \subsection{Transformación al plano del generador}
-\label{sec:org71ad0da}
+\label{sec:org9212c18}
 
 
 \begin{enumerate}
 \item Irradiancia Directa
-\label{sec:org408c873}
+\label{sec:org66a7e7e}
 
 \[B(\beta,\alpha)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
 
 \item Irradiancia Difusa
-\label{sec:org8ebd345}
+\label{sec:orgb25fb8f}
 
 \begin{enumerate}
 \item Modelo isotrópico
-\label{sec:org3b83550}
+\label{sec:orga736705}
 
 \[D(\beta,\alpha)=D(0)\cdot\frac{1+\cos(\beta)}{2}\]
 
 
 \item Modelo anisotrópico
-\label{sec:orgeeb00c0}
+\label{sec:org3ab212a}
 \[D(\beta,\alpha) = D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha)\]
 
 \[D^{I}(\beta,\alpha) = D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2}\]
@@ -288,15 +288,15 @@ r_D = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\co
 \end{enumerate}
 
 \item Irradiancia de Albedo
-\label{sec:orgfc5c19f}
+\label{sec:org15df90b}
 \[R(\beta,\alpha)=\rho\cdot G(0)\cdot\frac{1-\cos(\beta)}{2}\]
 
 \[\rho=0.2\]
 
 \item Irradiancia Global
-\label{sec:orgaf4b89f}
+\label{sec:orga0b2eeb}
 \[
-G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + G(\beta, \alpha)
+G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \]
 \end{enumerate}
 \end{document}
