--- a/diapos/AplicacionesESF.tex
+++ b/diapos/AplicacionesESF.tex
@@ -1,4 +1,4 @@
-% Created 2018-11-18 dom 20:30
+% Created 2020-06-13 sáb 10:22
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -16,49 +16,59 @@
 \usepackage{hyperref}
 \usepackage{color}
 \usepackage{listings}
+\usepackage[spanish]{babel}
+\setbeamercolor{alerted text}{fg=blue!50!black}
+\setbeamerfont{alerted text}{series=\bfseries}
+\setbeamerfont{block title}{series=\bfseries}
+\setbeamercolor{block title}{bg=structure.fg!20!bg!50!bg}
+\setbeamercolor{block body}{use=block title,bg=block title.bg}
+\setbeamertemplate{navigation symbols}{\insertsectionnavigationsymbol}
+\lstset{keywordstyle=\color{blue}, commentstyle=\color{gray!90}, basicstyle=\ttfamily\small, columns=fullflexible, breaklines=true,linewidth=\textwidth, backgroundcolor=\color{gray!23}, basewidth={0.5em,0.4em}, literate={¡}{{\textexclamdown}}1 {á}{{\'a}}1 {ñ}{{\~n}}1 {é}{{\'e}}1 {ó}{{\'o}}1 {í}{{\'i}}1 {ú}{{\'u}}1 {º}{{\textordmasculine}}1, showstringspaces=false}
 \usepackage{mathpazo}
-\usepackage{gensymb}
-\usepackage{amsmath}
-\usepackage{chemarr}%flechas para reacciones químicas (SFER.tex)
-\bibliographystyle{plain}
 \AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
 \AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
 \usepackage[emulate=units]{siunitx}
-\sisetup{fraction=nice, decimalsymbol=comma, retain-unity-mantissa = false}
 \newunit{\wattpeak}{Wp}
 \newunit{\watthour}{Wh}
 \newunit{\amperehour}{Ah}
+\sisetup{fraction=nice, decimalsymbol=comma, retain-unity-mantissa = false}
 \usepackage{steinmetz}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
+\usepackage{fancyvrb}
+\DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\tiny, formatcom = {\color{black!70}}}
+\usepackage{gensymb}
+\usepackage{amsmath}
+\usepackage{chemarr}%flechas para reacciones químicas (SFER.tex)
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 \beamertemplatenavigationsymbolsempty
 \setbeamertemplate{footline}[frame number]
-\setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
-\usetheme[hideothersubsections]{Goettingen}
+\bibliographystyle{plain}
+\usetheme{Boadilla}
 \usecolortheme{rose}
 \usefonttheme{serif}
-\author{Oscar Perpiñán Lamigueiro}
-\date{\url{http://oscarperpinan.github.io}}
+\author{\href{https://oscarperpinan.github.io}{Oscar Perpiñán Lamigueiro}}
+\date{}
 \title{Energía Solar Fotovoltaica}
 \subtitle{Aplicaciones y Contexto Mundial}
+\institute[UPM]{Universidad Politécnica de Madrid}
 \hypersetup{
- pdfauthor={Oscar Perpiñán Lamigueiro},
+ pdfauthor={\href{https://oscarperpinan.github.io}{Oscar Perpiñán Lamigueiro}},
  pdftitle={Energía Solar Fotovoltaica},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.13)}, 
+ pdfcreator={Emacs 26.1 (Org mode 9.3.6)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Aplicaciones de la Energía Solar Fotovoltaica}
-\label{sec:org05381b2}
+\label{sec:org87914dd}
 
 \subsection{Clasificación}
-\label{sec:org7e41953}
+\label{sec:org7f1ed41}
 
-\begin{frame}[label={sec:orgf1463f2}]{Definición}
+\begin{frame}[label={sec:orgecd78bc}]{Definición}
 \begin{itemize}
 \item Un sistema fotovoltaico es el conjunto de equipos eléctricos y
 electrónicos que producen energía eléctrica a partir de la radiación
@@ -80,16 +90,16 @@ solar.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org739aeeb}]{}
+\begin{frame}[label={sec:org0b67159}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ClasificacionSistemas.pdf}
 \end{center}
 \end{frame}
 
 \subsection{SFCR}
-\label{sec:orgb2bb065}
+\label{sec:org0ea52c3}
 
-\begin{frame}[label={sec:org16858e2}]{Definición}
+\begin{frame}[label={sec:orgd7bf967}]{Definición}
 \begin{itemize}
 \item Los sistemas conectados a red producen energía eléctrica para ser
 \alert{inyectada en la red convencional}.
@@ -105,7 +115,7 @@ convencional.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd6d5d5f}]{Tipos de SFCR}
+\begin{frame}[label={sec:org21de731}]{Tipos de SFCR}
 \begin{block}{Sistemas sobre Suelo}
 \begin{itemize}
 \item Concebidos exclusivamente para producir energía y obtener el
@@ -127,21 +137,21 @@ suelo, normalmente de potencias inferiores a los
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgf66ffb1}]{Sistemas sobre Suelo}
+\begin{frame}[label={sec:org652c636}]{Sistemas sobre Suelo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Photocampa.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org2c41945}]{Sistemas en Edificación}
+\begin{frame}[label={sec:orgc8dc029}]{Sistemas en Edificación}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PVUrban.png}
 \end{center}
 \end{frame}
 
 \subsection{Sistemas Autónomos}
-\label{sec:orgdbc0c75}
-\begin{frame}[label={sec:orgc9ff61a}]{Definición}
+\label{sec:orgb339b2d}
+\begin{frame}[label={sec:org4aaff4b}]{Definición}
 \begin{itemize}
 \item Objetivo: satisfacer una demanda energética determinada.
 
@@ -151,7 +161,7 @@ suelo, normalmente de potencias inferiores a los
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0a46d98}]{Aplicaciones profesionales}
+\begin{frame}[label={sec:orgd19f691}]{Aplicaciones profesionales}
 \begin{itemize}
 \item Radioenlaces, la protección catódica de gasoductos, hoteles, señales
 de tráfico y navegación aérea, refrigeración de vacunas, equipos
@@ -171,13 +181,13 @@ de socorro.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf905f06}]{}
+\begin{frame}[label={sec:org55f3beb}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/TelefoniaRural.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgfebfb3c}]{Sistemas de Electrificación Rural}
+\begin{frame}[label={sec:orge5b4811}]{Sistemas de Electrificación Rural}
 \begin{itemize}
 \item Los sistemas de electrificación rural suministran energía eléctrica
 a poblaciones rurales alejadas de redes eléctricas convencionales.
@@ -195,7 +205,7 @@ híbridas.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd2fee76}]{SHS}
+\begin{frame}[label={sec:org2bc0df8}]{SHS}
 \begin{itemize}
 \item Los sistemas domésticos habitualmente con potencias de
 \(\SI{100}{\watt}\) o \(\SI{200}{\watt}\), están asociados a una
@@ -209,7 +219,7 @@ de salud.
 \end{frame}
 
 
-\begin{frame}[label={sec:org22e9f34}]{Híbridos}
+\begin{frame}[label={sec:org94596df}]{Híbridos}
 \begin{itemize}
 \item Las centrales híbridas, compuestas por un generador fotovoltaico, un
 acumulador electroquímico y un grupo electrógeno o turbina eólica,
@@ -221,7 +231,7 @@ hasta los \(\SI{100}{\kilo\watt}\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0a9119f}]{Aplicaciones pequeño consumo}
+\begin{frame}[label={sec:orgc8e9f56}]{Aplicaciones pequeño consumo}
 Pequeños módulos fotovoltaicos, frecuentemente de silicio amorfo,
 alimentando equipos electrónicos como calculadoras o relojes,
 cargadores de móviles, pequeñas herramientas eléctricas, balizas
@@ -230,8 +240,8 @@ domésticas, etc.
 
 
 \subsection{Sistemas de Bombeo}
-\label{sec:org470f15a}
-\begin{frame}[label={sec:org103b81e}]{Definición}
+\label{sec:orgda612d4}
+\begin{frame}[label={sec:org8ef1f44}]{Definición}
 \begin{itemize}
 \item Los sistemas de bombeo emplean la energía eléctrica que produce el
 generador fotovoltaico para accionar una motobomba que eleva y
@@ -247,26 +257,26 @@ plantaciones individuales o comunitarias y la desalinización del
 agua extraída con sistemas de ósmosis inversa.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org03323a6}]{}
+\begin{frame}[label={sec:org6cc9422}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bombeo.jpg}
 \end{center}
 \end{frame}
 
 \section{Contexto Mundial}
-\label{sec:org006c4e6}
+\label{sec:org065d5a1}
 
 \subsection{Mercado Fotovoltaico}
-\label{sec:orgfe65e2d}
+\label{sec:org6a36a94}
 
-\begin{frame}[label={sec:org461f095}]{Potencia Instalada}
+\begin{frame}[label={sec:org56cd2df}]{Potencia Instalada}
 Según el informe del mercado fotovoltaico publicado por la Agencia
 Internacional de la Energía (IEA-PVPS)\footnote{\url{http://www.iea-pvps.org/fileadmin/dam/public/report/statistics/IEA-PVPS\_-\_A\_Snapshot\_of\_Global\_PV\_-\_1992-2017.pdf}}, a finales de 2017 había una
 potencia fotovoltaica acumulada de \SI{402.5}{\giga\watt} a nivel
 mundial.
 \end{frame}
 
-\begin{frame}[label={sec:org702a348}]{Potencia por Países}
+\begin{frame}[label={sec:orgf83a761}]{Potencia por Países}
 \begin{block}{29 países han superado la cifra de \SI{1}{\giga\watt} de potencia instalada acumulada}
 \begin{enumerate}
 \item China: \SI{131}{\giga\watt}
@@ -283,14 +293,14 @@ mundial.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org01d15cf}]{}
+\begin{frame}[label={sec:org74df8d6}]{Evolución de la potencia acumulada}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PVWorld.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org9d81681}]{Contribución energética}
+\begin{frame}[label={sec:org0b0604d}]{Contribución energética}
 \begin{block}{La ESF aporta el 2.14\% de la energía eléctrica mundial}
 \begin{itemize}
 \item Honduras: 13.3\%
@@ -303,9 +313,9 @@ mundial.
 \end{frame}
 
 \subsection{Paridad de Red}
-\label{sec:org209c9cb}
+\label{sec:orgfed7f96}
 
-\begin{frame}[label={sec:org312437c}]{Paridad de Red}
+\begin{frame}[label={sec:org4e72d75}]{Paridad de Red}
 \begin{itemize}
 \item Crecimiento sostenido fuertemente relacionado con el ritmo de
 reducción del precio del módulo, siendo causa y consecuencia del
@@ -317,13 +327,13 @@ la paridad de red en muchas partes del mundo.
 \end{frame}
 
 
-\begin{frame}[label={sec:org29566c4}]{}
+\begin{frame}[label={sec:org465c2ec}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CurvaAprendizajeFV_BreyerPiP.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge48c834}]{Paridad en 2010\footnote{El color naranja identifica los sistemas residenciales y el azul los
+\begin{frame}[label={sec:org8f09b9d}]{Paridad en 2010\footnote{El color naranja identifica los sistemas residenciales y el azul los
 sistemas industriales. El tamaño de los círculos está relacionado con
 el tamaño del mercado eléctrico de cada país.}}
 \begin{center}
@@ -332,7 +342,7 @@ el tamaño del mercado eléctrico de cada país.}}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb5a86ae}]{Paridad en 2013\footnote{El color naranja identifica los sistemas residenciales y el azul los
+\begin{frame}[label={sec:orgb2f3654}]{Paridad en 2013\footnote{El color naranja identifica los sistemas residenciales y el azul los
 sistemas industriales. El tamaño de los círculos está relacionado con
 el tamaño del mercado eléctrico de cada país.}}
 \begin{center}
@@ -342,9 +352,9 @@ el tamaño del mercado eléctrico de cada país.}}
 
 
 \subsection{Segmentos de mercado}
-\label{sec:org8e484e1}
+\label{sec:org346def9}
 
-\begin{frame}[label={sec:org9bad7bd}]{Segmentos de Mercado}
+\begin{frame}[label={sec:org8d30d23}]{Segmentos de Mercado}
 \begin{itemize}
 \item La European Photovoltaics Industry Association diferencia entre:
 \begin{itemize}
@@ -360,7 +370,7 @@ el tamaño del mercado eléctrico de cada país.}}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3d7d912}]{Segmentación en Alemania y España}
+\begin{frame}[label={sec:org153fdc3}]{Segmentación en Alemania y España}
 \begin{itemize}
 \item El mercado fotovoltaico español se ha basado en sistemas sobre
 terreno (plantas fotovoltaicas).
@@ -370,7 +380,7 @@ preponderancia a sistemas comerciales y residenciales.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga28a734}]{Tamaño de instalación y Conexión}
+\begin{frame}[label={sec:org728555e}]{Tamaño de instalación y Conexión}
 \begin{block}{España}
 \begin{itemize}
 \item Tamaño medio \SI{107}{\kilo\watt}
