--- a/libro/RadiacionSolar.tex
+++ b/libro/RadiacionSolar.tex
@@ -130,7 +130,7 @@ es aquella fracción de radiación procedente de la reflexión en el
 suelo. Habitualmente supone una contribución muy pequeña y en algunos
 casos puede ser despreciada.
 \end{itemize}
-La suma de estas tres componentes constituyen la denominada irradiancia
+La suma de estas tres componentes constituye la denominada irradiancia
 global, \begin{equation}
 G=B+D+R\end{equation}
 \nomenclature[G]{$G$}{Irradiancia global}
